--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ server.port=8080
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
+
+spring.servlet.multipart.max-file-size=50MB
+
+spring.servlet.multipart.max-request-size=500MB
